15-OCI-Cluster-Kubernetes/03-SSL-Uygulama/01-Rancher-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-deneme-uygulamasi
spec:
  selector:
    matchLabels:
      app: rancher-deneme-uygulamasi
  replicas: 2
  template:
    metadata:
      labels:
        app: rancher-deneme-uygulamasi
    spec:
      containers:
      - name: rancher-deneme-konteyneri
        image: dalekurt/rancher-demo:latest
