15-OCI-Cluster-Kubernetes/03-SSL-Uygulama/02-Rancher-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rancher-servisi
  labels:
    app: rancher-deneme-uygulamasi
spec:
  type: NodePort
  selector:
    app: rancher-deneme-uygulamasi
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
