15-OCI-Cluster-Kubernetes/03-SSL-Uygulama/03-Rancher-ingress-ssl-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress-staging
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - rancher.techakademi.com
    secretName: ssl-sertifika-staging
  rules:
  - host: rancher.techakademi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: rancher-servisi
            port:
              number: 80
